--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@ For all inquiries please write to salginerdem@gmail.com.</string>
     <string name="playgamesmassage">Please install Google Play Games to get your scores recorded.</string>
     <string name="filter_title">Smart Kids Math for kids. Math tests, summation, extraction, multiplication, division, 4 operation</string>
     <string name="content_description">header</string>
+    <string name="total">total</string>
 
 
 
