--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="simetrysoru">Draw the symmetry of the shape shown on the left side to the right side, according to the axis of symmetry.</string>
     <string name="questionleft">question</string>
     <string name="quittoast">Please click Finish Test to exit!</string>
-    <string name="simetry">symmetry</string>
+    <string name="konularsimetry">symmetry</string>
     <string name="disclaimer">Disclaimer
 FAIR USE NOTICE. \n The Application of SmartKids may contain copyrighted material (images,gifs, videos etc.) the use of which may not always be specifically authorized by the copyright owner. \n
         This constitutes a “fair use” of any such copyrighted material as we are providing small and insignificant proportion of the works available for math learning (Educational) purposes within the scope of United States Copyright Law, Section 107. \n
