--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@ For all inquiries please write to salginerdem@gmail.com.</string>
     <string name="points">Points</string>
     <string name="time">Time</string>
     <string name="draw">Draw :)</string>
-    <string name="question">question</string>
+    <string name="question">Question</string>
     <string name="twoplayersinfo">Welcome to Smart Kids Two Players \n Find the correct answer as soon as possible!</string>
     <string name="sharebody">Do you trust your math? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
     <string name="sharesub">I have found great Math Application!</string>
